2008-10-01  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (player_state_changed): Don't mark the track as
	played here...
	(position_update): ... do it here if at least 90% of the track has
	been reached.  Submit to lastfm if this holds and the track is at
	least 30 seconds long.

2008-09-30  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (meta_data_reader): Break out of the loop if the
	queue is empty, not if it is not empty.

2008-09-30  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (KEY_TRACK_CAPTION): Define.
	(deserialize): Set ST->CAPTION based on KEY_TRACK_CAPTION.
	(title_data_func): If ST->CAPTION is NULL, create a simple
	caption.
	(starling_run): Don't initialize ST->CAPTION here.

2008-09-30  Neal H. Walfield  <neal@gnu.org>

	* src/caption.c: New file.
	* src/caption.c: Likewise.
	* src/Makefile.am (starling_SOURCES): Add caption.h and caption.c.
	* src/starling.c: Include "caption.h".
	(struct _Starling): Add field caption.
	(title_data_func): Use caption_render to generate the caption.
	(starling_run): Create ST->CAPTION.

2008-09-30  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (library_button_press_event): Correctly set
	FIRST_TITLE and FIRST_SOURCE.

2008-09-30  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (struct _Starling): Add fields rating and
	rating_change_signal_id.
	(set_title): Get the song's rating and set ST->RATING accordingly.
	(rating): New function.
	(starling_run): Create a combo box for the ratings.  Attach the
	"changed" signal to rating.  Save the signal id in
	ST->RATING_CHANGE_SIGNAL_ID.
	* src/search.y (expand_term): Treat a word with the "rating:"
	prefix as a request to search on the rating.

2008-09-30  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h (enum mdb_fields): Add MDB_RATING.
	(music_db_get_info): Add parameter info.  Remove parameters
	source, artist, album, track, title, duration and genre.  Update
	users.
	* src/musicdb.c (struct info_cache_entry): Add fields play_count,